[package]
name = "flint"
version = "0.9.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
binrw = "0.15.0"
command-fds = "0.3.2"
fs-err = "3.1.3"
freedesktop-file-parser = { git = "https://github.com/BL-CZY/desktop_file_parser.git" }
im = "15.1.0"
pico-args = "0.5.0"
rustix = { version = "1.0.8", features = ["fs", "process", "rand", "system"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
xdg = "3.0.0"