[package]
name = "flint"
version = "0.9.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
binrw = "0.15.0"
command-fds = "0.3.2"
fs-err = "3.1.3"
freedesktop-file-parser = { git = "https://github.com/BL-CZY/desktop_file_parser.git" }
im = { version = "15.1.0", features = ["serde"] }
pico-args = "0.5.0"
rustix = { version = "1.0.8", features = ["fs", "process", "rand", "system"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
pam-sys = "0.5.6"
paste = "1.0.15"
shrinkwraprs = "0.3.0"
libc = "0.2.177"
zeroize = "1.8.2"
