[package]
name = "flint"
version = "0.9.0"
edition = "2024"


[dependencies]
anyhow = "1.0.98"
binrw = "0.15.0"
fs-err = "3.1.3"
rustix = { version = "1.0.8", features = [
    "fs",
    "process",
    "rand",
    "stdio",
    "system",
] }
toml = "0.9.7"
paste = "1.0.15"
shrinkwraprs = "0.3.0"
bytes = "1.10.1"
tokio = { version = "1.48.0", features = ["full"] }
zbus = { version = "5.12.0", default-features = false, features = ["tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = "1.0.228"
bon = "3.8.1"
envy = { git = "https://github.com/hazyfossa/envy.git", version = "0.1.0" }
freedesktop-session-parser = { git = "https://github.com/hazyfossa/freedesktop-session-parser", version = "0.1.0" }
argh = "0.1.19"
flint-pam = { version = "0.1.0", path = "../pam" }
