[package]
name = "flint-users"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2.186", optional = true }

serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.150", optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.52.3", features = ["net"], optional = true }
zlink = { version = "0.5.0", optional = true, default-features = false, features = [
    "tracing",
    "proxy",
    "tokio",
] }

[features]
nss = ["dep:libc"]
userdb = [
    "dep:zlink",
    "dep:tokio",
    "dep:serde",
    "dep:serde_json",
    "dep:thiserror",
]
